@@ -1,4 +1,9 @@
-2000-11-27  Frank Strauss  <strauss@ibr.cs.tu-bs.de>
+2000-11-30  Frank Strauss  <strauss@ibr.cs.tu-bs.de>
+
+	* tools/smidump.c: Juergen fixed some bugs and added some
+	modifications changes to the recent smidump changes.
+
+2000-11-29  Frank Strauss  <strauss@ibr.cs.tu-bs.de>
 
 	* win/config.h.in: Added to the distribution files.
 
@@ -13,6 +18,8 @@
 	to Sverre H. Huseby for his small and beatiful shhopt library.
 	See http://shh.thathost.com/pub-unix/.
 	
+2000-11-27  Frank Strauss  <strauss@ibr.cs.tu-bs.de>
+
 	* tools/dump-*.c: Fixed some minor compiler warnings.
 
 	* ltconfig: Updated to libtool 1.3.5.
